# peract_bimanual

./: .gitignore  Dockerfile  INSTALLATION.md  README.md  eval.py  peract_config.py  pyproject.toml  run_seed_fn.py  train.py
agents/: agent_factory.py  replay_utils.py
agents/act_bc_lang/: __init__.py  act_bc_lang_agent.py  act_policy.py  launch_utils.py
agents/act_bc_lang/detr/: build.py
agents/act_bc_lang/detr/models/: backbone.py  detr_vae.py  position_encoding.py  transformer.py
agents/arm/: launch_utils.py  next_best_pose_agent.py  qattention_agent.py
agents/baselines/bc_lang/: bc_lang_agent.py  launch_utils.py
agents/baselines/vit_bc_lang/: launch_utils.py  vit_bc_lang_agent.py
agents/bimanual_peract/: __init__.py  launch_utils.py  perceiver_lang_io.py  qattention_peract_bc_agent.py  qattention_stack_agent.py
agents/c2farm_lingunet_bc/: launch_utils.py  networks.py  qattention_lingunet_bc_agent.py  qattention_stack_agent.py
agents/peract_bc/: launch_utils.py  perceiver_lang_io.py  qattention_peract_bc_agent.py  qattention_stack_agent.py
agents/rvt/: __init__.py  launch_utils.py
conf/: config.yaml  eval.yaml
conf/hydra/job_logging/: custom.yaml
conf/method/: ACT_BC_LANG.yaml  BIMANUAL_PERACT.yaml  PERACT_BC.yaml  RVT.yaml
helpers/: custom_rlbench_env.py  demo_loading_utils.py  network_utils.py  observation_utils.py  preprocess_agent.py  utils.py
helpers/optim/: lamb.py
scripts/: install_conda.sh  install_dependencies.sh
voxel/: augmentation.py  voxel_grid.py
